@@ -1,6 +1,7 @@
 package com.dmdirc.ktirc.events
 
 import com.dmdirc.ktirc.IrcClient
+import com.dmdirc.ktirc.messages.sendMessage
 import com.dmdirc.ktirc.model.ServerFeature
 import com.dmdirc.ktirc.model.asUser
 
@@ -12,3 +13,11 @@ internal fun ChannelNamesReceived.toModesAndUsers(client: IrcClient) = sequence 
         }
     }
 }.toList()
+
+fun IrcClient.reply(message: MessageReceived, response: String, prefixWithNickname: Boolean = false) {
+    if (caseMapping.areEquivalent(message.target, serverState.localNickname)) {
+        sendMessage(message.user.nickname, response)
+    } else {
+        sendMessage(message.target, if (prefixWithNickname) "${message.user.nickname}: $response" else response)
+    }
+}
