@@ -1,13 +1,13 @@
 package com.dmdirc.ktirc.events
 
 import com.dmdirc.ktirc.IrcClient
-import com.dmdirc.ktirc.messages.pongMessage
+import com.dmdirc.ktirc.messages.sendPong
 
 internal class PingHandler : EventHandler {
 
     override fun processEvent(client: IrcClient, event: IrcEvent) {
         when (event) {
-            is PingReceived -> client.send(pongMessage(event.nonce))
+            is PingReceived -> client.sendPong(event.nonce)
         }
     }
 
