@@ -2,11 +2,14 @@ package com.dmdirc.ktirc.events
 
 import com.dmdirc.ktirc.IrcClient
 import com.dmdirc.ktirc.TestConstants
+import com.dmdirc.ktirc.io.CaseMapping
 import com.dmdirc.ktirc.model.ModePrefixMapping
 import com.dmdirc.ktirc.model.ServerFeature
 import com.dmdirc.ktirc.model.ServerState
+import com.dmdirc.ktirc.model.User
 import com.nhaarman.mockitokotlin2.doReturn
 import com.nhaarman.mockitokotlin2.mock
+import com.nhaarman.mockitokotlin2.verify
 import org.junit.jupiter.api.Assertions.assertEquals
 import org.junit.jupiter.api.BeforeEach
 import org.junit.jupiter.api.Test
@@ -16,6 +19,7 @@ internal class EventUtilsTest {
     private val serverState = ServerState("")
     private val ircClient = mock<IrcClient> {
         on { serverState } doReturn serverState
+        on { caseMapping } doReturn CaseMapping.Ascii
     }
 
     @BeforeEach
@@ -60,6 +64,31 @@ internal class EventUtilsTest {
         assertEquals("zeroCool", result[1].second.nickname)
         assertEquals("dade", result[1].second.ident)
         assertEquals("root.localhost", result[1].second.hostname)
+    }
+
+    @Test
+    fun `reply sends response to user when message is private`() {
+        serverState.localNickname = "zeroCool"
+        val message = MessageReceived(TestConstants.time, User("acidBurn"), "Zerocool", "Hack the planet!")
+
+        ircClient.reply(message, "OK")
+        verify(ircClient).send("PRIVMSG acidBurn :OK")
+    }
+
+    @Test
+    fun `reply sends unprefixed response to user when message is in a channel`() {
+        val message = MessageReceived(TestConstants.time, User("acidBurn"), "#TheGibson", "Hack the planet!")
+
+        ircClient.reply(message, "OK")
+        verify(ircClient).send("PRIVMSG #TheGibson :OK")
+    }
+
+    @Test
+    fun `reply sends prefixed response to user when message is in a channel`() {
+        val message = MessageReceived(TestConstants.time, User("acidBurn"), "#TheGibson", "Hack the planet!")
+
+        ircClient.reply(message, "OK", prefixWithNickname = true)
+        verify(ircClient).send("PRIVMSG #TheGibson :acidBurn: OK")
     }
 
 
